Updated readme for the edited script

--- a/Project_v5/final_assemblies/QC/README
+++ b/Project_v5/final_assemblies/QC/README
@@ -1,4 +1,4 @@
-The QC script will do the following: 
+The QC_edit script will do the following: 
 
 1) Make script to symlink all assemblies here
 2) Make script to run BUSCO on all
