--- a/Project_v5/final_assemblies/annotation/README
+++ b/Project_v5/final_assemblies/annotation/README
@@ -7,6 +7,8 @@ transcripts.aa
 transcripts.fa  
 Trinotate.sqlite
 
+Create sqlite database following instructions on the trinotate page
+Run RunTransdecoder.sh
 This is how you will know the previous step was completed fully.  Edit the RunAnnotate.sh file to have the NAME_PREFIX changed to something sane:
 
 ./Annotate.sh -p NAME_PREFIX
