--- a/Project_v5/Trinity/README
+++ b/Project_v5/Trinity/README
@@ -1,4 +1,4 @@
 This should run without extra fussing!  However, feel free if you want to adjust any parameters.  See the documentation below for more details.
-
+Change output path to slurm scratch directory based on examples listed below and at: https://help.rc.ufl.edu/doc/Trinity before runnning
 Trinity Manual: https://github.com/trinityrnaseq/trinityrnaseq/wiki
 Trinity License: https://opensource.org/licenses/BSD-2-Clause 
